tests/integrations/snapshots/integrations__alternate_file@status_code.snap
---
source: tests/integrations/main.rs
description: "Should successfully run the task in `other.toml`."
---
Some(
    0,
)
