tests/integrations/snapshots/integrations__alternate_file@stderr.snap
---
source: tests/integrations/main.rs
description: "Should successfully run the task in `other.toml`."
---

