tests/integrations/snapshots/integrations__alternate_file@stdout.snap
---
source: tests/integrations/main.rs
description: "Should successfully run the task in `other.toml`."
---
            ╭─┬◀ starting
group::task │O│ hello world
            ╰─┴▶ success
