tests/integrations/snapshots/integrations__empty_command_list@status_code.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about the command list being empty.
---
Some(
    2,
)
