tests/integrations/snapshots/integrations__empty_interpreter@status_code.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about the interpreter being empty.
---
Some(
    2,
)
