tests/integrations/snapshots/integrations__empty_interpreter@stderr.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about the interpreter being empty.
---
Errors:
╰─► failed to load the Engage file
    ╰─► the Engage file contains errors
        ╰─► `interpreter` must not be an empty list
