tests/integrations/snapshots/integrations__empty_interpreter@stdout.snap
---
source: tests/integrations/main.rs
description: Should exit with an error about the interpreter being empty.
---

