tests/integrations/snapshots/integrations__env@status_code.snap
---
source: tests/integrations/main.rs
description: Should exit successfully after making use of a configured environment variable.
---
Some(
    0,
)
