tests/integrations/snapshots/integrations__environment@stderr.snap
---
source: tests/integrations/main.rs
description: Should exit successfully after making use of a configured environment variable.
---

