tests/integrations/snapshots/integrations__environment@stdout.snap
---
source: tests/integrations/main.rs
description: Should exit successfully after making use of a configured environment variable.
---
     ╭─┬◀ starting
task │O│ hello world
     ╰─┴▶ success
